--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    z-index: -1;
+    z-index: -1; /* Užtikrina, kad žvaigždės bus fone */
 }
 
 .star {
