--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,24 @@
 body {
-    font-family: 'Poppins', sans-serif;
-    background: #0f0c29;
-    color: #fff;
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
+    background: linear-gradient(45deg, #0f0c29, #302b63, #24243e);
+    background-size: 200% 200%;
+    animation: gradientMove 10s ease infinite;
     overflow-x: hidden; /* Užtikrina, kad žemėlapis nebus nupjautas */
 }
+@keyframes gradientMove {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
 .star-background {
     position: absolute;
     top: 0;
